# AIVA

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  avatar_controller.py  config.py  cross_attention.py  epe.py  evaluator.py  logging.py  main.py  mspn.py  pipeline.py  pyproject.toml  requirements.txt  templates.py  text_encoder.py  trainer.py  tts_engine.py  video.py  visual_encoder.py
