[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aiva-companion"
version = "0.1.0"
description = "Emotion-aware virtual companion: a prototype implementation of the AIVA framework (arXiv:2509.03212)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
  "affective computing",
  "multimodal sentiment analysis",
  "emotion recognition",
  "conversational AI",
  "human-computer interaction",
  "virtual companion",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "transformers>=4.38.0",
  "timm>=0.9.12",
  "openai>=1.12.0",
  "pyyaml>=6.0.1",
  "omegaconf>=2.3.0",
  "click>=8.1.7",
  "rich>=13.7.0",
  "numpy>=1.24.0",
  "Pillow>=10.0.0",
  "opencv-python>=4.8.0",
  "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "black>=24.1.0",
  "ruff>=0.2.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
]
tts = [
  "TTS>=0.22.0",
  "bark>=0.1.0",
  "elevenlabs>=0.3.0",
  "soundfile>=0.12.1",
  "librosa>=0.10.1",
]
serve = [
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "websockets>=12.0",
]
all = ["aiva-companion[dev,tts,serve]"]

[project.scripts]
aiva = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
